// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CompletionStatus matches snapshot 1`] = `
<div
  className="sc-bczRLJ sc-gKXOVf fZGYwW ipsiPu sc-kDDrLX"
>
  <h2
    className="sc-iBkjds jcQjIn"
  >
    No questions have been answered.
  </h2>
  <p>
    Begin working on the quiz.
  </p>
  <div
    className="sc-ftvSup fywwjO"
  >
    <button
      className="sc-jSMfEi hsxEPT"
      data-test-id="start-btn"
      onClick={[Function]}
    >
      Start
    </button>
  </div>
</div>
`;

exports[`CompletionStatus matches snapshot with all questions completed 1`] = `
<div
  className="sc-bczRLJ sc-gKXOVf fZGYwW ipsiPu sc-kDDrLX"
>
  <h2
    className="sc-iBkjds jcQjIn"
  >
    You are done.
  </h2>
  <p>
    Great job answering all the questions.
  </p>
  <div
    className="sc-ftvSup fywwjO"
  >
    <button
      className="sc-jSMfEi hsxEPT"
      data-test-id="next-btn"
      onClick={[Function]}
    >
      Next
    </button>
  </div>
</div>
`;

exports[`CompletionStatus matches snapshot with some questions completed 1`] = `
<div
  className="sc-bczRLJ sc-gKXOVf fZGYwW ipsiPu sc-kDDrLX"
>
  <h2
    className="sc-iBkjds jcQjIn"
  >
    Quiz is partially complete.
  </h2>
  <p>
    You've completed 5 of 15 questions.
  </p>
  <div
    className="sc-ftvSup fywwjO"
  >
    <button
      className="sc-jSMfEi hsxEPT"
      data-test-id="continue-btn"
      onClick={[Function]}
    >
      Continue
    </button>
  </div>
</div>
`;
